...
          </Column>

          <Column spacing={12}>
            <Column spacing={6}>
              <UiText>Email</UiText>
              <TextInput
                testID="sign-in-email"
                onChangeText={setEmail}
                autoCapitalize="none"
                autoCorrect={false}
                keyboardType="email-address"
                autoComplete="email"
                returnKeyType="next"
...
            </Button>
          </Column>

          <Row spacing={4}>
            <UiText>Don't have an account?</UiText>
            <Button
              testID="sign-in-link-to-sign-up"
              variant="text"
              label="Sign up"
              onPress={() => router.replace('/(auth)/sign-up')}
            />
          </Row>
        </Column>
...
